<resources>
    <string name="app_name">Green-Hero</string>
    <string name="title_home">Home</string>
    <string name="title_recycle">Recycle</string>
    <string name="title_collection">Collection</string>
    <string name="title_profile">Profile</string>
    <string name="my_hero">My Hero</string>
    <string name="button">LOG OUT</string>
    <string name="recycle">Recycle</string>
    <string name="add_item">Add Item</string>
    <string name="type_name">Type Name</string>
    <string name="paper">Paper</string>
    <string name="plastic">Plastic</string>
    <string name="glass">Glass</string>
    <string name="username_or_email">Username or email</string>
    <string name="turn_waste_into_wonder_recycle_today">Turn waste into wonder, recycle today.</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="reduce_reuse_recycle_for_a_greener_world">Reduce, reuse, recycle: for a greener world.</string>
    <string name="email">Email</string>
    <string name="password_text">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Manage">Manage\n</string>
    <string name="stats">Stats</string>
    <string name="recycledcount">34</string>
    <string name="topMaterial">Paper\n</string>
    <string name="topMaterialRecycle">20</string>
    <string name="Recycles">Recycles</string>
    <string name="username">Username</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="profileNextReward">Test</string>
    <string name="collection_text">Recycle to add more items to your collection!</string>
    <string name="collection_title">Collection</string>
    <string name="quantity_collection">Quantity: </string>
    <string name="Profile">Profile</string>
    <string name="item_name">Item Name</string>
</resources>