<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.green_hero.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recycle"
        android:name="com.example.green_hero.ui.recycle.RecycleFragment"
        android:label="@string/title_recycle"
        tools:layout="@layout/fragment_recycle" />

    <fragment
        android:id="@+id/navigation_collection"
        android:name="com.example.green_hero.ui.collection.CollectionFragment"
        android:label="@string/title_collection"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.green_hero.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>