<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_view">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="389dp"
                android:layout_height="98dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/recycle_head"
                    android:layout_width="197dp"
                    android:layout_height="78dp"
                    android:fontFamily="@font/open_sans_bold_italic"
                    android:shadowColor="@color/shadowGray"
                    android:shadowDx="0"
                    android:shadowDy="10"
                    android:shadowRadius="15"
                    android:text="@string/recycle"
                    android:textColor="@color/primaryGreen"
                    android:textSize="55sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.083"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints,TextSizeCheck,TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="270dp"
                android:layout_height="205dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/recycle_image"
                    android:layout_width="223dp"
                    android:layout_height="183dp"
                    android:contentDescription="@string/description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/trash"
                    tools:ignore="MissingConstraints,ImageContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="348dp"
                android:layout_height="333dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/primaryGreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                <TextView
                    android:id="@+id/add_item_head"
                    android:layout_width="227dp"
                    android:layout_height="73dp"
                    android:fontFamily="@font/open_sans_bold_italic"
                    android:text="@string/add_item"
                    android:textColor="@color/backgroundWhite"
                    android:textSize="50sp"
                    style="@style/TextViewWithShadow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.029999971"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/type_name_input"
                    android:layout_width="163dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_corners_white"
                    android:ems="10"
                    android:hint="@string/type_name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/backgroundWhite"
                    android:textColorHint="@color/backgroundWhite"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@+id/quantity"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_item_head" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/type_name_input"
                    app:layout_constraintTop_toBottomOf="@+id/type_name_input"
                    tools:ignore="MissingConstraints,TextSizeCheck">

                    <RadioButton
                        android:id="@+id/paper_button"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:text="@string/paper"
                        android:textColor="@color/backgroundWhite" />

                    <RadioButton
                        android:id="@+id/plastic_button"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"

                        android:text="@string/plastic"
                        android:textColor="@color/backgroundWhite" />

                    <RadioButton
                        android:id="@+id/glass_button"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:text="@string/glass"
                        android:textColor="@color/backgroundWhite" />

                </RadioGroup>

                <Button
                    android:id="@+id/signUpButton"
                    style="@style/TextViewWithShadow"
                    android:layout_width="163dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_corners_button"
                    android:backgroundTint="@color/primaryGreen"
                    android:text="@string/recycle"
                    android:textAllCaps="false"
                    android:textColor="@color/primaryWhite"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_corners_white"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/quantity"
                    android:inputType="numberSigned"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/primaryWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/type_name_input"
                    app:layout_constraintTop_toBottomOf="@+id/add_item_head" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>